--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,18 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[glisse]
+order = ["dev", "staging", "main"]
+
+[glisse.staging.merged]
+hooks = [
+      "bumpversion --tag",
+      "echo $USER",
+]
+
+[glisse.main.merged]
+hooks = [
+      "bumpversion --tag",
+      "date +%F",
+]
